# gg250916

./: .env  .gitignore  .htmlvalidateignore  .obsidianignore  .orig_exec_plan.md  .rules  .rules.backup.20250826_0306  1 아카이브 Archive 와 액티브 Active.txt  AGENTS.md  AGENTS_expand.md  AGENTS_log.md  README.md  _temp_run.sh  autostart_wrapper.sh  check_servers.sh  migrate_threads.py  package-lock.json  package.json  setup_dev_env_v3.sh  setup_dev_env_v4.sh  start_servers.sh  실행 절차 Step by Step.txt  후보 서버 Brave Search MCP.txt
.obsidian/: app.json  graph.json  workspace.json
.venv_backend/: pyvenv.cfg
QUARANTINE/: QUARANTINE.md
app/: api.py  api_orch.py  gate_utils.py
bridge/: README.md  server.js
context_observer/: protocol.md  retention_policy.md  session_rollup_20250816.md  session_rollup_20250816_1608.md  token_budget.md
docs/: 0_0_금강 발원문 원본.md  0_금강 발원문.md  1_SSOT_개념.md  2_불변식_정의.md  3_금강소울_정의.md  4_로컬vs웹금강.md  5_전환게이트_의미.md  6_기술스택_선정근거.md  7_기술스택_동결.md  8_UI_MVP_요구사항.md  9_UI_MVP_게이트.md  readme.md  전이확정선언.md  🪷 금강 소울 v1.7 — 존재 철학 + 언어 규칙 + 시계열 유지.md
draft_docs/: BT-09_release_checklist.md  웹금강_서명_프롬프트.md  전이응답.md  첫_화두_축원.md
gumgang_0_5/: .ai_context  .git_safety_config.json  .gitignore  .pre-commit-config.yaml  .protocol_checksums.json  .rules  .rules.backup.20250808_222402  .rules.backup.20250808_223434  .rules.meta.json  .session_state.json  (+116 more)
gumgang_0_5/gumgang-v2/src-tauri/: Cargo.toml  tauri.conf.json
gumgang_0_5/gumgang-v2/src-tauri/src/: evolution.rs  main.rs
ui/dev_a1_vite/src-tauri/: Cargo.toml  tauri.conf.json
ui/dev_a1_vite/src-tauri/.cargo/: config.toml
(+2520 files in other folders)
